--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,13 +10,21 @@ endif(NOT DEFINED CMAKE_BUILD_TYPE)
 add_executable(hello_qnx
     src/hello_qnx.cpp
 )
-add_executable(net_speed_server
-    src/net_speed_server.cpp
+add_executable(tcp_speed_server
+    src/tcp_speed_server.cpp
 )
-add_executable(net_speed_client
-    src/net_speed_client.cpp
+add_executable(tcp_speed_client
+    src/tcp_speed_client.cpp
+)
+add_executable(udp_speed_receiver
+    src/udp_speed_receiver.cpp
+)
+add_executable(udp_speed_sender
+    src/udp_speed_sender.cpp
 )
 
 target_link_libraries(hello_qnx PRIVATE -pthread)
-target_link_libraries(net_speed_server PRIVATE -pthread -lsocket)
-target_link_libraries(net_speed_client PRIVATE -pthread -lsocket)
+target_link_libraries(tcp_speed_server PRIVATE -pthread -lsocket)
+target_link_libraries(tcp_speed_client PRIVATE -pthread -lsocket)
+target_link_libraries(udp_speed_receiver PRIVATE -pthread -lsocket)
+target_link_libraries(udp_speed_sender PRIVATE -pthread -lsocket)
